flash messages improved; used respond_with

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 <%= render partial: 'layouts/header' %>
 <div class="yield" >
+  <%= render partial: "layouts/flash", locals: { flash: flash } %>
   <%= yield %>
 </div>
 <div id="footer">
