--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
   <% flash.each do |type, message| %>
-  <div class="alert alert-<%= bootstrap_class_for(type) %>" role="alert">
+  <div class="alert <%= bootstrap_class_for(type.to_sym) %>" role="alert">
   <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span></button>
   <%= message %>
   </div>
